Constraintprog/minizinc-1.6/tests/parsing/flatzinc/f-no-solve-bad.exp
f-no-solve-bad.fzn:4:
  syntax error: model must have a solve item
% -- pretty-print after parsing --------------
int: x = 3;

constraint f(x);
