Constraintprog/minizinc-1.6/tests/parsing/flatzinc/f-no-solve-bad.fzn
% RUNS ON fzn_yacc
% RUNS ON fzn_parse
int: x = 3;
constraint f(x);
